feat: implement /documents/{documentId} endpoint (#293) - EBSIINT-8410
Merge in EBSI/core-services from feat/EBSIINT-8410 to main
