# apis/track-and-trace-v1/src/modules/documents/dto/get-document.params.dto.ts
@@ -1,0 +1,8 @@
+import { IsDocumentId } from "../validators/IsDocumentId.js";
+
+export class GetDocumentParamsDto {
+  @IsDocumentId()
+  "documentId"!: string;
+}
+
+export default GetDocumentParamsDto;
