# apis/track-and-trace-v1/src/modules/documents/dto/index.ts
@@ -1,1 +1,2 @@
+export * from "./get-document.params.dto.js";
 export * from "./get-documents.dto.js";
